2021-01-29  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Create a shaded JAR.

2021-01-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Message.java:
	Added Message creation methods for side-effect messages.

	* src/main/java/galyleo/server/Server.java:
	Provide stamp(Message) to add protocol verison, session, and date
	to outgoing messages.

2021-01-26  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Server.java:
	Provide public static OBJECT_MAPPER field.

	* src/main/java/galyleo/server/Channel.java (Control):
	Changed action method prototype to
	"void action(Dispatcher,Message,Message) throws Exception".

	* src/main/java/galyleo/kernel/Kernel.java:
	Publish execute_input and execute_result messages in response to
	execute_request messages.

	* src/main/java/galyleo/server/Connection.java:
	Parse Connection JsonNode argument directly instead of
	deserializing to a custom Properties class.
