@@ -1,0 +1,10 @@
+/**
+ * {@link galyleo.shell.Java} Notebook run-time classes.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@Manifest.Section
+package galyleo.shell.java;
+
+import ball.annotation.Manifest;
